--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,15 +19,17 @@
             android:exported="false" />
         <activity
             android:name=".ui.activity.splashscreen.SplashScreenActivity"
-            android:exported="false" />
-        <activity
-            android:name=".ui.activity.main.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".ui.activity.main.MainActivity"
+            android:exported="true">
+
         </activity>
     </application>
 
