--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -10,21 +10,27 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
         android:networkSecurityConfig="@xml/network_security_config"
-        android:usesCleartextTraffic="true"
+        android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FeriAplikasiPembayaranIuranAir"
-        tools:targetApi="31">
+        android:usesCleartextTraffic="true"
+        tools:targetApi="31" >
         <activity
-            android:name=".ui.activity.register.RegisterActivity"
+            android:name=".ui.activity.admin.users.AdminUsersActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.activity.login.LoginActivity"
+            android:name=".ui.activity.admin.main.AdminMainActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.activity.splashscreen.SplashScreenActivity"
-            android:exported="true">
+            android:name=".ui.activity.user.register.RegisterActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.activity.user.login.LoginActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.activity.user.splashscreen.SplashScreenActivity"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -32,8 +38,8 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.activity.main.MainActivity"
-            android:exported="true"/>
+            android:name=".ui.activity.user.main.MainActivity"
+            android:exported="true" />
     </application>
 
 </manifest>
