--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -15,22 +15,25 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FeriAplikasiPembayaranIuranAir"
         android:usesCleartextTraffic="true"
-        tools:targetApi="31" >
+        tools:targetApi="31">
         <activity
-            android:name=".ui.activity.admin.users.AdminUsersActivity"
+            android:name=".ui.activity.admin.AdminPembayaranActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.activity.admin.main.AdminMainActivity"
+            android:name=".ui.activity.admin.AdminUsersActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.activity.user.register.RegisterActivity"
+            android:name=".ui.activity.admin.AdminMainActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.activity.user.login.LoginActivity"
+            android:name=".ui.activity.user.RegisterActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.activity.user.splashscreen.SplashScreenActivity"
-            android:exported="true" >
+            android:name=".ui.activity.user.LoginActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.activity.user.SplashScreenActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -38,7 +41,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.activity.user.main.MainActivity"
+            android:name=".ui.activity.user.MainActivity"
             android:exported="true" />
     </application>
 
